# ansari_aluminium

./: .env.example  .gitignore  README.md  debug_prefs.py  fix_prefs.py  generate_icon.py  hello.py  manage.py  process_logo.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ansari_aluminium/: asgi.py  urls.py  wsgi.py
ansari_aluminium/settings/: base.py  local.py  production.py
billing/: admin.py  models.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_add_share_id.py  0003_invoice_labour_cost_invoice_material_cost.py
core/: context_processors.py  dynamic_preferences_registry.py  utils.py
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_customer_address_alter_customer_city_and_more.py
dashboard/: urls.py  views.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_project.py
quotations/: admin.py  models.py  urls.py  views.py
quotations/migrations/: 0001_initial.py  0002_add_share_id.py  0003_quotation_labour_cost_quotation_material_cost.py
templates/: base.html  llms.txt  robots.txt
templates/accounts/: login.html  profile.html  register.html
templates/admin/: base_site.html  login.html
templates/billing/: detail.html  list.html  pdf_template.html
templates/customers/: detail.html  form.html  (+1 more)
website/: admin.py  models.py  sitemaps.py  urls.py  views.py
(+27 files in other folders)
